<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:id="@+id/main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".MainActivity">
 <!-- Logo at the top -->

 <!-- Bottom card -->

 <ImageView
     android:id="@+id/imageLogo"
     android:layout_width="200dp"
     android:layout_height="200dp"
     android:layout_marginTop="30dp"
     android:layout_marginLeft="95dp"
     android:src="@drawable/logo" />

 <ImageView
     android:id="@+id/safeLogo"
     android:layout_width="50dp"
     android:layout_height="50dp"
     android:layout_marginTop="20dp"
     android:layout_marginLeft="5dp"
     android:src="@drawable/safe" />

 <TextView
     android:id="@+id/gosafe"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_marginTop="30dp"
     android:layout_marginLeft="55dp"
     android:text="@string/safego"
     android:textColor="@color/black"
     android:textSize="15sp"
     android:textStyle="bold" />


 <androidx.cardview.widget.CardView
     android:id="@+id/bottomCard"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:layout_alignParentBottom="true"
     android:layout_margin="16dp"
     app:cardCornerRadius="28dp"
     app:cardElevation="8dp">

  <LinearLayout
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      android:padding="10dp">


   <!-- Title -->
   <TextView
       android:id="@+id/textWelcome"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:text="@string/welcome"
       android:textColor="@color/black"
       android:textSize="32sp"
       android:textStyle="bold" />

   <!-- Subtitle -->
   <TextView
       android:id="@+id/textSubtitle"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_marginTop="8dp"
       android:alpha="0.7"
       android:text="@string/login_info"
       android:textColor="@color/black"
       android:textSize="16sp" />

   <TextView
       android:id="@+id/textRegister"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_gravity="end"
       android:layout_marginTop="8dp"
       android:text="@string/reg"
       android:textSize="12sp"
       android:textColor="?attr/colorPrimary"
       android:padding="4dp"
       android:clickable="true"
       android:focusable="true"
       tools:ignore="HardcodedText" />


   <!-- Divider -->
   <View
       android:layout_width="match_parent"
       android:layout_height="1dp"
       android:layout_marginTop="16dp"
       android:layout_marginBottom="16dp"
       android:background="#DDDDDD" />

   <!-- Aadhaar -->
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/tilAadhaar"
       style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       app:hintEnabled="true"
       app:boxStrokeWidth="1dp"
       app:boxStrokeWidthFocused="2dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextAadhaar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/aadhaar_hint"
        android:inputType="number"
        android:maxLength="12"
        android:minHeight="28dp"
        android:autofillHints="username"
        android:importantForAutofill="yes"

        android:drawableEnd="@drawable/check" />
   </com.google.android.material.textfield.TextInputLayout>

   <!-- Password -->
   <com.google.android.material.textfield.TextInputLayout
       android:id="@+id/tilPassword"
       style="@style/Widget.Material3.TextInputLayout.OutlinedBox"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_marginTop="12dp"
       app:hintEnabled="true"
       app:passwordToggleEnabled="true"
       app:boxStrokeWidth="1dp"
       app:boxStrokeWidthFocused="2dp">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:autofillHints="password"
        android:importantForAutofill="yes"
        />
   </com.google.android.material.textfield.TextInputLayout>

   <!-- Register button -->
   <com.google.android.material.button.MaterialButton
       android:id="@+id/buttonRegister"
       android:layout_width="match_parent"
       android:layout_height="48dp"
       android:layout_marginTop="15dp"
       android:text="@string/register"
       android:textStyle="bold"
       app:cornerRadius="12dp"
       app:backgroundTint="?attr/colorPrimary"
       app:rippleColor="?attr/colorOnPrimary" />
  </LinearLayout>
 </androidx.cardview.widget.CardView>
</RelativeLayout>
